--- a/frontend/src/components/features/features.css
+++ b/frontend/src/components/features/features.css
@@ -1,23 +1,35 @@
 .features {
     display: flex;
     flex-direction: row;
-  }
+}
 
   .feature-item{
     padding: 40px;
     width: 100%;
-  }
+}
 
   .feature-icon {
     width: 100px;
     border: 10px solid #00bc77;
     border-radius: 50%;
     padding: 1rem;
-  }
+}
 
   .feature-item-title {
     color: #222;
     font-size: 1.25rem;
     font-weight: bold;
     margin-bottom: 0.5rem;
+}
+
+@media screen and (max-width: 769px){
+  .features {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
   }
+  .feature-item {
+    padding: 20px;
+    width: inherit;
+  }
+}
