--- a/frontend/src/pages/editUserName/editUser.css
+++ b/frontend/src/pages/editUserName/editUser.css
@@ -1,14 +1,15 @@
 .editPage-container {
-    background-color: #12002b;
     padding-top: 20px;
-    padding-bottom: 400px;
+    padding-bottom: 30px;
+    margin-left: 100px;
+    margin-right: 100px;
+
 }
 
 .edit-title{
-    color: #fff;
-    margin-bottom: 100px;
+    color: #000;
+    margin-bottom: 30px;
 }
-
 
 .editButton{
     display: block;
@@ -18,23 +19,27 @@
     font-weight: bold;
     border-color: #00bc77;
     background-color: #00bc77;
-    color: #fff;
+    color: #000;
+    cursor: pointer;
+}
+
+.form-container{
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    margin-bottom: 30px;
 }
 
 .editForm input{
-    width: 150px;
     padding: 10px;
-    margin-bottom: 40px;
-    margin-top: 40px;
 }
 
 .editLabel{
-    color: #fff;
+    color: #000;
     padding: 10px;
     margin-right: 15px;
     font-size: 16px;
 }
-
 
 .button-container{
     display: flex;
@@ -42,13 +47,77 @@
     gap: 20px;   
 }
 
-.error-container{
+.errorMessage-container{
     display: flex;
     justify-content: center;
+    padding: 0;
 }
 
 .errorMessage{
-    width: 300px;
     color: red;
+    font-weight: 700;
     background-color: #fff;
+}
+
+.accountEdit{
+    border-radius: 5px;
+    background-color: #3d3d3d;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    color: #fff;
+    margin-bottom: 15px;
+    width: 100%;
+    padding: 30px;
+    flex-direction: row;
+    box-sizing: border-box;
+    text-align: left;
+}
+
+.dropDown{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 40px;
+}
+
+img.arrow{
+    filter: invert(1);
+    cursor: pointer;
+    border: none;
+    width: 40px;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: contain;
+    object-fit: cover;
+    transition: transform .5s ease-in;
+    transform: rotate(90deg);
+}
+
+.arrowDown{
+    filter: invert(1);
+    cursor: pointer;
+    border: none;
+    width: 40px;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: contain;
+    object-fit: cover;
+}
+
+@media screen and (max-width: 769px){
+    .editPage-container {
+        margin-left: 10px;
+        margin-right: 10px;
+    
+    }
+
+    .accountEdit{
+        width: 100%;
+        padding: 20px;
+    }   
+
+    .arrowDown {
+        width: 30px;
+    }
 }
