--- a/frontend/src/pages/signIn/signIn.css
+++ b/frontend/src/pages/signIn/signIn.css
@@ -12,7 +12,7 @@
     padding: 2rem;
   }
 
-  .form-title{
+.form-title{
     font-size: 24px;
     font-weight: bolder;
 }
@@ -52,3 +52,14 @@
     padding: 5px;
     font-size: 1.2rem;
 } 
+
+.error-message-container{
+    padding-top: 20px;
+}
+
+.signIn-error{
+    color: red;
+    font-size: larger;
+}
+
+
